--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,13 @@ nav {
     position: fixed;
     top: 20px;
     left: 20px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 nav a {
     color: #fff;
     text-decoration: none;
-    display: inline-block;
-    animation: moveLeft 1s ease-in;
 }
 
 header {
@@ -44,11 +44,11 @@ img {
     object-fit: cover;
     width: auto;
     animation: moveUp 1s ease-in;
+    width: 450px;
 }
 
 .img-rounded {
     border-radius: 50%;
-    max-width: 400px;
 }
 
 .texts {
@@ -88,6 +88,37 @@ img {
     background: linear-gradient(to right, #191654, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+.links {
+    position: fixed;
+    display: flex;
+    top: 0;
+    justify-content: space-around;
+    align-items: center;
+    height: 100vh;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    transition: all 1s ease;
+    background: #43C6AC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #191654, #43C6AC);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #191654, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.one {
+    -webkit-clip-path: circle(0% at 0 0);
+    clip-path: circle(0% at 0 0);
+}
+
+.two {
+    -webkit-clip-path: circle(150% at 0 0);
+    clip-path: circle(150% at 0 0);
+}
+
+.icon {
+    z-index: 100;
+    animation: moveLeft 1s ease-in;
+}
+
 @keyframes moveLeft {
     0% {
         opacity: 0;
@@ -121,5 +152,74 @@ img {
     100% {
         opacity: 1;
         transform: translate(0);
+    }
+}
+
+@media screen and (max-width:1000px) {
+    img {
+        width: 400px;
+    }
+}
+
+@media screen and (max-width:800px) {
+    img {
+        width: 370px;
+    }
+
+    .texts h1 {
+        font-size: 70px;
+    }
+
+    .texts h2 {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width:700px) {
+    img {
+        width: 250px;
+    }
+
+    .texts h1 {
+        font-size: 40px;
+    }
+
+    .texts h2 {
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width:450px) {
+    .container {
+        width: 100%;
+        flex-wrap: wrap-reverse;
+        justify-content: center;
+    }
+
+    .texts {
+        width: 100%;
+        text-align: center;
+    }
+
+    .texts h1 {
+        font-size: 60px;
+    }
+}
+
+@media screen and (max-width:340px) {
+    img {
+        width: 160px;
+    }
+
+    .texts h1 {
+        font-size: 35px;
+    }
+
+    .texts a {
+        width: 120px;
+    }
+
+    .texts h2 {
+        font-size: 15px;
     }
 }
